Made references more uniform

--- a/bibliography.tex
+++ b/bibliography.tex
@@ -8,9 +8,9 @@
 %cites from detbeamtest
 %
 
-\bibitem{dunecdr} DUNE CDR,  \url{https://web.fnal.gov/project/LBNF/ReviewsAndAssessments/CD-1Preparation/SitePages/CDR\%20and\%20Annex\%20Drafts.aspx}
+\bibitem{dunecdr} "LBNF/DUNE Conceptual Design Report",  \url{https://web.fnal.gov/project/LBNF/ReviewsAndAssessments/LBNF-DUNE\%20CD-1-Refresh\%20Directors\%20Review/SitePages/Conceptual\%20Design\%20Report.aspx}
 
-\bibitem{eoi} SPSC-EOI-011, \url{http://cds.cern.ch/record/1953730/files/SPSC-EOI-011.pdf?version=1}
+\bibitem{eoi} "Expression of Interest for a Full-Scale Detector Engineering Test and Test Beam Calibration of a Single-Phase LAr TPC" M.A. Leigui de Oliveira et al, SPSC-EOI-011, \url{http://cds.cern.ch/record/1953730/files/SPSC-EOI-011.pdf?version=1}
 
 \bibitem{CRubbia}"The Liquid-argon time projection chamber: a new concept for Neutrino Detector", C. Rubbia, CERN-EP/77-08 (1977).
 
@@ -18,51 +18,46 @@
 %\bibitem{ICARUS2} 
 "Performance of a liquid argon time projection chamber exposed to the CERN West Area Neutrino Facility neutrino beam", F. Arneodo et al. (ICARUS-Milano Collaboration) - Physical Review D (2006) (Vol. 74, No. 112001). 
 
-\bibitem{argoneut1} ``First Measurements of Inclusive Muon Neutrino Charged Current Differential Cross Sections on Argon." C. Anderson et al, Physical Review Letters (PRL) 108 (2012), 161802. 
+\bibitem{argoneut1} "First Measurements of Inclusive Muon Neutrino Charged Current Differential Cross Sections on Argon." C. Anderson et al, Physical Review Letters (PRL) 108 (2012), 161802. 
 
 \bibitem{argoneut2} "The ArgoNeuT Detector in the NuMI Low-Energy beam line at Fermilab" C. Anderson et al, Journal of Instrumentation (JINST), 2012 JINST Vol. 7 P10019. 
 
 \bibitem{fluka05} "FLUKA: a multi-particle transport code" A. Ferrari, P.R. Sala, A. Fasso`, and J. Ranft, CERN-2005-10 (2005), INFN/TC\_05/11, SLAC-R-773.
 
-\bibitem{miniboonefsi}  A. A. Aguilar-Arevalo, et al.,
-Phys. Rev. D 83, 052007 (2011).
+\bibitem{miniboonefsi}  "Measurement of neutrino-induced charged-current charged pion production cross sections on mineral oil at E$\sim$1 GeV" A. A. Aguilar-Arevalo, et al., Phys. Rev. D 83, 052007 (2011).
 
-\bibitem{minervafsi} Charged Pion Production in Interactions on Hydrocarbon 
-at $\overline{E}$= 4.0 GeV'', B. Eberly et. al., \url{http://arxiv.org/abs/1503.01520}.
+\bibitem{minervafsi} "Charged Pion Production in Interactions on Hydrocarbon 
+at $\overline{E}$= 4.0 GeV", B. Eberly et. al., arXiv:1406.6415 [hep-ex].
 
-\bibitem{genie} for example GENIE, ``The GENIE Neutrino Monte Carlo Generator'', C. Andreopoulos, et al., Nucl. Instrum. Meth. A614, 87 (2010).
+\bibitem{genie} "The GENIE Neutrino Monte Carlo Generator", C. Andreopoulos, et al., Nucl. Instrum. Meth. A614, 87 (2010).
 
-\bibitem{fsirev} see for example review article ``Pion-nucleus Interactions'',
-T.~S.~H. Lee and R. P. Redwine, Ann. Rev. Nucl. Sci,  {\bf 52}, 23 (2002).
+\bibitem{fsirev} "Pion-nucleus Interactions", T.~S.~H. Lee and R. P. Redwine, Ann. Rev. Nucl. Sci,  {\bf 52}, 23 (2002).
 
-\bibitem{jaffe} ``The columnar theory of ionization'', Ann. Phys. {\bf 42}, 303 (1931).
+\bibitem{jaffe} "The columnar theory of ionization", Ann. Phys. {\bf 42}, 303 (1931).
 
 \bibitem{argoneut_angle} "A study of electron recombination using highly ionizing particles in the ArgoNeuT Liquid Argon TPC", 
 R. Acciarri et al, Journal of Instrumentation 
 (JINST), 2013 JINST Vol. 8 P08005.
 
-\bibitem{icarus_recombination} ``Study of electron recombination in liquid argon with the ICARUS TPC'', S. Amoruso et. al, NIM A {\bf 523}, 275 (2004). 
+\bibitem{icarus_recombination} "Study of electron recombination in liquid argon with the ICARUS TPC", S. Amoruso et. al, NIM A {\bf 523}, 275 (2004). 
 
-\bibitem{nn_pid} Based on
-``Neural Network Parameterizations of Electromagnetic Nucleon Form Factors'', K. M. Graczyk, P. Plonski, R. Sulej, JHEP Vol. 2010, No 9, pp.1-30 (2010).
-\bibitem{rd_pid} 
-\url{http://www.ire.pw.edu.pl/~rsulej/NetMaker}
+\bibitem{nn_pid} "Neural Network Parameterizations of Electromagnetic Nucleon Form Factors", K. M. Graczyk, P. Plonski, R. Sulej, JHEP Vol. 2010, No 9, pp.1-30 (2010).
+
+\bibitem{rd_pid} NetMaker, \url{http://www.ire.pw.edu.pl/~rsulej/NetMaker}
 
 \bibitem{icarus_reco}
 %spatial and calorimetric reconstruction algorithm is also published:
-``Precise 3D track reconstruction algorithm for the ICARUS T600 liquid argon time projection chamber detector'', ICARUS Collaboration, 
+"Precise 3D track reconstruction algorithm for the ICARUS T600 liquid argon time projection chamber detector", ICARUS Collaboration, 
 Adv.High Energy Phys., vol. 2013, p. 260820, 2013
 
-\bibitem{icarus_eg} ``Experimental search for the LSND anomaly with the ICARUS
-detector in the CNGS neutrino beam'', ICARUS Collaboration, Eur. Phys. J. C (2013) 73:2345.
+\bibitem{icarus_eg} "Experimental search for the LSND anomaly with the ICARUS
+detector in the CNGS neutrino beam", ICARUS Collaboration, Eur. Phys. J. C (2013) 73:2345.
 
-\bibitem{argoneut_eg} "Results from and Status of ArgoNeuT and MicroBooNE" by 
-A. Szelc., conference: \url{http://neutrino2014.bu.edu/}.
+\bibitem{argoneut_eg} "Results from and Status of ArgoNeuT and MicroBooNE" A. Szelc., XXVI International Conference on Neutrino Physics and Astrophysics (\url{http://neutrino2014.bu.edu/}).
 
-\bibitem{stopmu} docdb~\#9079, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=9079}
+\bibitem{stopmu} LBNE docdb~\#9079, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=9079}
 
-\bibitem{bueno}
-``Nucleon Decay Searches with large Liquid Argon TPC Detectors at Shallow Depths: atmospheric neutrinos and cosmogenic backgrounds'', A.Bueno, Z.Dai, Y.Ge, M.Laffranchi, A.J.Melgarejo, A.Meregaglia, S.Navas, A.Rubbia, JHEP 0704:041, (2007).
+\bibitem{bueno} "Nucleon Decay Searches with large Liquid Argon TPC Detectors at Shallow Depths: atmospheric neutrinos and cosmogenic backgrounds", A.Bueno, Z.Dai, Y.Ge, M.Laffranchi, A.J.Melgarejo, A.Meregaglia, S.Navas, A.Rubbia, JHEP 0704:041, (2007).
 
 %
 %cites from singlephasedet
@@ -70,19 +65,19 @@ A. Szelc., conference: \url{http://neutrino2014.bu.edu/}.
   %
   %cites from singlephasedet input: APA-CP-FieldCage
   %
-\bibitem{spacecharge} docdb~\#6471, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6471}
+\bibitem{spacecharge} LBNE docdb~\#6471, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6471}
 
-\bibitem{CFD} docdb~\#6140, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6140}
+\bibitem{CFD} LBNE docdb~\#6140, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6140}
 
   %
   %cites from singlephasedet input: photondetector
   %
-\bibitem{CFD} docdb~\#6140, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6140}
+\bibitem{CFD} LBNE docdb~\#6140, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6140}
 \bibitem{absorption} 128nm light absorption length reference
 
 %\bibitem{conversio-eff}
 
-\bibitem{sensl} SensL SiPM \url{http://sensl.com/products/silicon-photomultipliers/cseries/}
+\bibitem{sensl} SensL SiPM, \url{http://sensl.com/products/silicon-photomultipliers/cseries/}
   %
   %cites from singlephasedet input: readout
   %
@@ -117,11 +112,11 @@ A. Szelc., conference: \url{http://neutrino2014.bu.edu/}.
 %cites from computing
 %
 
-\bibitem{spade_icecube} IceCube Data Movement \url{https://icecube.wisc.edu/science/data/datamovement}.
+\bibitem{spade_icecube} IceCube Data Movement, \url{https://icecube.wisc.edu/science/data/datamovement}.
 
-\bibitem{spade_dayabay}Data processing and storage in the Daya Bay Reactor Antineutrino Experiment \url{http://arxiv.org/pdf/1501.06969.pdf}.
+\bibitem{spade_dayabay}"Data processing and storage in the Daya Bay Reactor Antineutrino Experiment" M. He, Nucl. Phys. B Proceedings Supplement 00 (2015) 1–5 (\url{http://arxiv.org/pdf/1501.06969.pdf}).
 
-\bibitem{atlas_express} Prompt reconstruction of LHC collision data with the ATLAS reconstruction software, N.Barlow et al, \textit{Journal of Physics: Conference Series 331 (2011) 032004}
+\bibitem{atlas_express} "Prompt reconstruction of LHC collision data with the ATLAS reconstruction software" N.Barlow et al, \textit{Journal of Physics: Conference Series 331 (2011) 032004}
 
 %
 %cites from nuplatform
@@ -130,7 +125,7 @@ A. Szelc., conference: \url{http://neutrino2014.bu.edu/}.
 %
 %cites from organ
 %
-\bibitem{LBNEorg} doc-db~\#6547; \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6547}
+\bibitem{LBNEorg} LBNE doc-db~\#6547; \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6547}
 
 %
 %cites from summary
