--- a/bibliography.tex
+++ b/bibliography.tex
@@ -78,7 +78,12 @@ A. Szelc., conference: \url{http://neutrino2014.bu.edu/}.
   %cites from singlephasedet input: photondetector
   %
 \bibitem{CFD} docdb~\#6140, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6140}
-\bibitem{absorption} 128nm light absorption length reference
+
+\bibitem{rayleigh} E. Grace, J. Nikkel,  arXiv: 1502.04213
+
+\bibitem{absorption} B. Jones et al., arXiv: 1306.4605
+
+128nm light absorption length reference
 
 %\bibitem{conversio-eff}
 
