correct Rayleigh scattering length

--- a/photondetector.tex
+++ b/photondetector.tex
@@ -10,7 +10,7 @@ the reconstruction and rejection of background events.\\
 %
 While the TPC will have spatial resolution that is far superior to a photon detection system, there is no intrinsic precise determination of the event time and the drift time for TPC events can be up to milliseconds. The photon detection system can determine the start of an event occurring in the TPC volume (or entering the volume) to about 6 ns. For beam-triggered events the performance of the photon detection timing information can be crosschecked and evaluated during the detector beam test. In addition to providing trigger functionality, the PDS may be able to improve the event energy reconstruction by providing drift length dependent corrections to energy loss of the drifting electrons.
 In the absence of an external electric field, a charged particle passing through liquid argon will produce about 44,000 photons ($\lambda$ = 128~nm) per MeV of deposited energy. 
-At higher electric drift fields the number of photons will be smaller due to reduced recombination, but at 500 V/cm the yield is about 20,000 photons per MeV. Roughly one-third of the photons are prompt, 2-6~ns, and two-thirds are generated after a delay of 1.1-1.6~$\mu$s. LAr is highly transparent to the 128~nm VUV photons with a Rayleigh scattering length and absorption length of 66~cm \cite{rayleigh} and $>$200~cm \cite{absorption} respectively. The relatively large light yield makes the scintillation process an excellent candidate for triggering and  determination of t$_0$ for non-beam related events. Detection of the scintillation light may also be helpful in background rejection and possibly
+At higher electric drift fields the number of photons will be smaller due to reduced recombination, but at 500 V/cm the yield is about 20,000 photons per MeV. Roughly one-third of the photons are prompt, 2-6~ns, and two-thirds are generated after a delay of 1.1-1.6~$\mu$s. LAr is highly transparent to the 128~nm VUV photons with a Rayleigh scattering length and absorption length of 55$\pm$5~cm \cite{rayleigh} and $>$200~cm \cite{absorption} respectively. The relatively large light yield makes the scintillation process an excellent candidate for triggering and  determination of t$_0$ for non-beam related events. Detection of the scintillation light may also be helpful in background rejection and possibly
 provide improvements for energy reconstruction.
 
 Several prototypes of photon detection systems for single phase liquid argon detectors have been developed by the former LBNE photon detector group over the past few years. There are currently three prototypes under consideration for use in the first module of the DUNE far detector, a baseline design along with two alternate designs. A decision on the design to be deployed in the CERN test will be made in late 2015. The CERN single phase prototype detector provides the first full scale test of the photon detectors which will be fully integrated into a 
