add photon refs

--- a/bibliography.tex
+++ b/bibliography.tex
@@ -72,17 +72,18 @@ detector in the CNGS neutrino beam", ICARUS Collaboration, Eur. Phys. J. C (2013
   %
   %cites from singlephasedet input: photondetector
   %
-<<<<<<< HEAD
+
 \bibitem{CFD} docdb~\#6140, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6140}
 
 \bibitem{rayleigh} E. Grace, J. Nikkel,  arXiv: 1502.04213
 
 \bibitem{absorption} B. Jones et al., arXiv: 1306.4605
 
-=======
 \bibitem{CFD} LBNE docdb~\#6140, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6140}
-\bibitem{absorption} 128nm light absorption length reference
->>>>>>> 9c401b0a8d40df416d53a4d45871236125b77eae
+
+\bibitem{rayleigh} E. Grace, J. Nikkel,  arXiv: 1502.04213
+
+\bibitem{absorption} B. Jones et al., arXiv: 1306.4605
 
 %\bibitem{conversio-eff}
 
