--- a/appendix.tex
+++ b/appendix.tex
@@ -1,7 +1,9 @@
 \label{appendix}
 \subsection*{Cryostat}
 
-The design parameters for the CERN prototype cryostat are listed in Table~\ref{tbl:cryogenics-design-parameters}.
+
+\textbf{Design parameters:} 
+The design parameters for the CERN prototype cryostat are listed in Table~\ref{tbl:cryogenics-design-parameters}.\\
 
 \begin{table}[htpb]
 \centering
@@ -38,7 +40,7 @@ Beam window   & Precise location TBD. Multiple beam windows installed on the ups
 \label{tbl:cryogenics-design-parameters}
 \end{table}
 
-\textbf{Insulation system and secondary membrane: }
+\noindent \textbf{Insulation system and secondary membrane: }
 %
 The membrane cryostat requires insulation applied to all internal surfaces of the outer support structure 
 and roof in order to control the heat ingress and hence required refrigeration heat load. 
@@ -46,7 +48,7 @@ To avoid bubbling of the liquid argon inside the tank, the maximum static heat l
 Given an 
 average thermal conductivity coefficient for the insulation material of 0.0283 W/(m$\cdot$K), the heat input 
 from the surrounding steel is expected to be about 3.2~kW total. It assumes that the hatches are foam 
-insulated as well. This is shown in Table~\ref{tbl:heat-load-calc}.
+insulated as well. This is shown in Table~\ref{tbl:heat-load-calc}.\\
 
 \begin{table}[htpb]
 \centering
@@ -63,10 +65,10 @@ Total   &   &   &   & 3,162 \\ \hline
 \end{tabular}
 \caption{Heat load calculation for the membrane cryostat (insulation thickness=0.9~m). }
 \label{tbl:heat-load-calc}
-\end{table}
+\end{table} 
 
 
-\textbf{Top cap:}
+\noindent \textbf{Top cap:}
 %
 Table~\ref{tbl:cryostat-top-parameters} presents the list of the design parameters for the top of the cryostat.
 %
