--- a/organ.tex
+++ b/organ.tex
@@ -1,5 +1,6 @@
 \label{organ}
 %insert organization, schedule and cost estimates here
+\textcolor{red}{NOTE: --- Section 9 is still being edited AND being worked on and checked ---}
 
 \subsection{Schedule}
 The major milestones for the proposed CERN prototype detector construction and beam test is dictated by the DUNE overall schedule which foresees to place the first 10~kton detector module underground as early as calendar year 2021. Additional detector modules, possibly of different design, are expected to follow at intervals of 1-2 years in a technically driven schedule.
@@ -122,17 +123,17 @@ Cost figures are informed by component production for the 35~t detector.
 \begin{tabular}{| l| l| c |}
 \hline
 \textbf{no. } & \textbf{Item}  & \textbf{Cost [kUSD]}  \\ \hline
-1 & Time Projection Chamber & 2'999 \\
-2 & DAQ \& Monitoring  & 73 \\
-3 & FD Installation  & 1'322 \\
-4 & Photon Detector  & 935 \\
-5 & Cold Electronics & 476 \\
-6 & HV power supplies & 300\\
+1 & Time Projection Chamber & \\
+2 & DAQ \& Monitoring  & \\
+3 & FD Installation  &  \\
+4 & Photon Detector  &  \\
+5 & Cold Electronics &  \\
+6 & HV power supplies & \\
 
 7 & computing & \\
-8 & cryostat &  2'300 ?\\   % 2300 CHF in WA105
-9 & cryogenics system & 1'400 ? \\  % 1400 CHF for WA105
-10 & clean room & 400 ? \\
+8 & cryostat &  \\   % 2300 CHF in WA105
+9 & cryogenics system &  \\  % 1400 CHF for WA105
+10 & clean room &  \\
 11 & infrastructure & \\
 12 & integration \& logistics & \\ \hline
   & \textbf{Total } & \\ \hline
