--- a/testbeamreq.tex
+++ b/testbeamreq.tex
@@ -86,7 +86,7 @@ At the time of this proposal, the beamline design has not been finalized. To est
 \begin{figure}[tbh]
   \centering
 \includegraphics[scale=0.47]{figures/80GeVPion-15cmCuTarget.jpg}
-  \caption{Simulation of 100k 80 GeV $\pi^+$ on 15 cm copper target. The figure on the left is for positively charged and the figure on the right is for negatively charged secondary particles from the target. }
+  \caption{Simulated flux of charged secondary particles resulting from 100k $\pi^+$ each with an energy of 80~GeV impinging on a 15 cm copper target. The figure on the left is for positively charged and the figure on the right is for negatively charged secondary particles.}
 \label{fig:PionOnCuTarget}
 \end{figure}
 
